tests/paczka1/small_fuzzy/28166493.err
Error in line 2: 20JW3Da S884 36,44
Error in line 9: 3OiRy0j8 A500 14,8
Error in line 3: 20JW3Da S884 61,9
